--- a/styles/style.css
+++ b/styles/style.css
@@ -497,7 +497,7 @@ footer .top h1 {
   font-family: signature;
   font-size: 7em;
   font-weight: 400;
-  color: rgb(255, 0, 0);
+  color: rgb(255, 255, 255);
   margin-top: -20px;
 }
 footer .social {
@@ -694,6 +694,9 @@ footer .foot p .bx {
   }
 }
 @media screen and (max-width: 500px) {
+  header .head .left .desc h2 {
+    font-size: 1.1em;
+  }
   section#portfolio .works {
     grid-template-columns: repeat(auto-fit, 95%);
   }
@@ -703,5 +706,47 @@ footer .foot p .bx {
   }
   section#portfolio .works .work .work-desc h3 {
     font-size: 1.5em;
+  }
+}
+@media screen and (max-width: 480px) {
+  header .head {
+    width: 100%;
+  }
+  header .head .left {
+    width: 100%;
+    margin: 0;
+  }
+  header .head .left .desc {
+    width: 100%;
+  }
+  header .head .left .desc h1 {
+    font-size: 2.1em;
+  }
+  header .head .left .desc h2 {
+    margin-top: 20px;
+  }
+  header .head .left .desc p {
+    width: 300px;
+    margin-top: 20px;
+  }
+  header .head .left .social {
+    width: 80%;
+  }
+  header .head .left .social a {
+    margin: 0;
+  }
+  header .head .left .social a .bx {
+    font-size: 1.1em;
+    margin-left: -7px;
+  }
+  footer .top {
+    text-align: center;
+  }
+  footer .top h1 {
+    font-size: 5em;
+    margin-top: 10px;
+  }
+  footer .foot p {
+    font-size: 15px;
   }
 }/*# sourceMappingURL=style.css.map */
